# cmake-game-engine

./: .gitmodules  LICENSE  README.md  course-outline.md
Coffee/: CMakeLists.txt  CMakePresets.json
Coffee/cmake/: CoffeeConfig.cmake
Coffee/include/Coffee/: Coffee.h  Logs.h
Coffee/include/Coffee/Core/: Application.h  Window.h
Coffee/include/Coffee/Graphics/: Graphics.h
Coffee/include/Coffee/Renderer/: Renderer.h
Coffee/src/: CMakeLists.txt
Coffee/src/Core/: Application.cpp  CMakeLists.txt  Window.cpp
Coffee/src/Graphics/: CMakeLists.txt  Graphics.cpp
Coffee/src/Renderer/: CMakeLists.txt  Renderer.cpp
Coffee/tools/: build.sh
GameApp/: CMakeLists.txt  CMakePresets.json  game.cpp
GameApp/cmake/: windows-toolchain.cmake
GameApp/tools/: build.sh
tools/: build.sh  setup.sh
